--- a/backend/themes/default/templates/affiliates.html
+++ b/backend/themes/default/templates/affiliates.html
@@ -3,6 +3,14 @@
     <v-container fluid>
         <h2>Affiliate Networks</h2>
 
+        <v-row dense class="mt-4">
+            <v-col>
+                <v-btn color="primary" dark @click="openCreate">
+                    Add Affiliate Network
+                </v-btn>
+            </v-col>
+        </v-row>
+
 
         <v-row dense class="mt-4">
             <v-col>
